메인 스타일 수정, 광고 배너 슬라이드 ing.. , footer 추가(dropdown 시도중..)

--- a/my_web_wanted/web/css/reset.css
+++ b/my_web_wanted/web/css/reset.css
@@ -35,7 +35,7 @@ button {
 a {
 	cursor: pointer;
 	text-decoration: none;
-	color: black;
+	/* color: black; */
 }
 select:focus {
 	outline: none;
