--- a/my_web_wanted/web/css/header.css
+++ b/my_web_wanted/web/css/header.css
@@ -1,41 +1,41 @@
-.header{
-	box-sizing: border-box;
-	display: flex;
+.gnb {
+	width: 100%;
 	height: 52px;
-	float: left;
+	padding: 0 28px;
+	border-bottom: 1px solid #EEE;
+	display: flex;
+	justify-content: space-between;
+	align-items:center;
+	background: #fff;
+	font-family: "Noto Sans KR", sans-serif;
+	color: #707070;
 }
-.gnb-left{
+
+.gnb-left {
 	align-items: center;
 	box-sizing: border-box;
 	display: flex;
 }
 
-.tab_right{
-	float: right;
+.tab_right {
+	display:flex;
+	align-items: center;
 }
-li,a{
+
+li, a {
 	float: left;
-	margin-left: 20px;
+	position: relative;
+	margin: 0 12px;
 }
-.divider{
-	box-sizing: border-box;
-	width: 1px;
-    height: 16px;
-    font-family: "Noto Sans KR", sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    color: rgb(112,112,112);
-}
-.tab_center{
-	box-sizing: border-box;
+
+.tab_center {
 	display: flex;
 	flex-wrap: nowrap;
-	font-family: "Noto Sans KR", sans-serif;
 	font-size: 14px;
-	font-weight: 400;
-	line-height: 20px;
+	margin: 0 24px;
 	white-space: nowrap;
-	color: rgb(153,153,153);
-	
+	color: #999999;
+}
+.logo{
+	width: 128px;
 }
