--- a/my_web_wanted/web/css/index.css
+++ b/my_web_wanted/web/css/index.css
@@ -4,7 +4,27 @@ body {
 }
 
 /* 메인 광고*/
-.main_0_img{
-	width: 100%; 
-	height: 100%; 
+#main_0_img{
+	width: 100%;
+	height: 280px;
+}
+body > div > div.section > div.main_0 > img{
+	    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    font-size: 14px;
+    line-height: 1.428571429;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-weight: 400;
+    box-sizing: border-box;
+    background-color: transparent;
+    color: #337ab7;
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 280px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 12px;
+    border: 1px solid #EEEEEE;
 }
